--- a/src/app/components/contact-info/contact-info.html
+++ b/src/app/components/contact-info/contact-info.html
@@ -1,37 +1,13 @@
 <template args="model">
-    <pop-up skip="true"></pop-up>
+    <component data-id="popup" skip="true"></component>
     <div class="col">
-        <label>
-            First name
-            <span class="invalid-message">{model.validationMessage('first_name')}</span>
-            <input name="first_name" type="text" required>
-        </label>
-        <label>
-            Last name
-            <span class="invalid-message">{model.validationMessage('last_name')}</span>
-            <input name="last_name" type="text" required>
-        </label>
-        <label>
-            Email address
-            <span class="invalid-message">{model.validationMessage('email')}</span>
-            <input name="email" type="email" required>
-        </label>
+        <component data-id="firstName" skip="true"></component>
+        <component data-id="lastName" skip="true"></component>
+        <component data-id="email" skip="true"></component>
     </div>
     <div class="col">
-        <label>
-            Phone number
-            <span class="invalid-message">{model.validationMessage('phone')}</span>
-            <input name="phone" type="text" required>
-        </label>
-        <label>
-            School name
-            <span class="invalid-message">{model.validationMessage('company')}</span>
-            <input name="company" type="text" required>
-        </label>
-        <label>
-            School url
-            <span class="invalid-message">{model.validationMessage('URL')}</span>
-            <input name="URL" type="url" value="http://" pattern=".*[.][a-zA-Z][a-zA-Z]+" required>
-        </label>
+        <component data-id="phone" skip="true"></component>
+        <component data-id="school" skip="true"></component>
+        <component data-id="schoolUrl" skip="true"></component>
     </div>
 </template>
