--- a/src/app/components/popup/popup.html
+++ b/src/app/components/popup/popup.html
@@ -1,8 +1,8 @@
 <template args="model">
     <div class="overlay" if="model.show">
-        <div class="popup">
-            <p>{model.message}</p>
-            <a class="btn dismiss" tabindex="1">Got it</a>
+        <div role="dialog" aria-describedby="popupMessage">
+            <p id="popupMessage">{model.message}</p>
+            <button class="btn dismiss" tabindex="1">Got it</button>
         </div>
     </div>
 </template>
