--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -27,63 +27,15 @@
                 <div class="text-content labeled-inputs row book-info">
 
                     <div class="col">
-                        <label>Which OpenStax textbook(s) are you interested in adopting?
-                            <span class="select-instructions">Select at least one.</span>
-                            <span class="invalid-message"><br />{model.validationMessage('00NU00000053nzR')}</span>
-                            <div skip="true"></div>
-                            <select name="00NU00000053nzR" multiple required>
-                                <option each="title in model.titles" value="{title.value}"
-                                 selected="{model.defaultTitle == title.value ? '' : null}">
-                                    {title.text}
-                                 </option>
-                            </select>
-                        </label>
-
-                        <label>
-                            <span>How many students do you teach each semester?</span>
-                            <span class="invalid-message"><br />{model.validationMessage('00NU00000052VId')}</span>
-                            <input name="00NU00000052VId" type="number" min="1" required>
-                        </label>
-
-                        <label class="question">
-                            Which of our partners would you like to give permission to contact you about additional
-                            resources to support our books?
-                            <span class="select-instructions">You may select more than one.</span>
-                            <span class="invalid-message"><br />{model.validationMessage('00NU00000055spm')}</span>
-                            <div skip="true"></div>
-                            <select name="00NU00000055spm" multiple>
-                                <option value="Online homework providers">
-                                    Online homework providers
-                                </option>
-                                <option value="Courseware providers">
-                                    Courseware providers
-                                </option>
-                                <option value="Print custom editions">
-                                    Print custom editions
-                                </option>
-                            </select>
-                        </label>
+                        <component data-id="whichBook" skip="true"></component>
+                        <component data-id="howMany" skip="true"></component>
+                        <component data-id="partnerContact" skip="true"></component>
                     </div>
 
                     <div class="col">
 
-                        <label class="question">How did you hear about OpenStax?
-                            <span class="select-instructions">Select at least one.</span>
-                            <span class="invalid-message"><br />{model.validationMessage('00NU00000055spr')}</span>
-                            <div skip="true"></div>
-                            <select name="00NU00000055spr" multiple required>
-                                <option value="Web search">Web search</option>
-                                <option value="Colleague">Colleague</option>
-                                <option value="Conference">Conference</option>
-                                <option value="Email">Email</option>
-                                <option value="Facebook">Facebook</option>
-                                <option value="Twitter">Twitter</option>
-                                <option value="Webinar">Webinar</option>
-                                <option value="Partner organization">Partner organization</option>
-                                <option value="" data-other="other-source">Other (specify below)</option>
-                            </select>
-                        </label>
-
+                        <component data-id="hearAbout" skip="true"></component>
+                        
                         <label id="other-source" class="hidden">
                             Other:
                             <input name="00NU00000055spr" type="text"
