--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -4,12 +4,10 @@
         <div class="pinned"></div>
     </div>
     <div class="articles">
-        <div class="update-box">
+        <div class="update-box" role="region">
             <h3>Get updates in your inbox.</h3>
             <a class="btn cta" href="http://www2.openstax.org/l/218812/2016-10-04/lvk">Sign Up</a>
         </div>
-        <div class="boxed">
-            <div class="container"></div>
-        </div>
+        <div class="boxed container" role="complementary"></div>
     </div>
 </template>
