Update placeholder text in Errata form Location field

--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -42,7 +42,7 @@
         </div>
         <div class="question">Where did you find this error?</div>
         <span class="invalid-message">{model.validationMessage('location')}</span>
-        <input type="text" name="location" placeholder="Page number, url, etc."
+        <input type="text" name="location" placeholder="Chapter and Section number, url, etc."
          value="{model.location}" readonly="{model.sourceProvided}"
          required />
         <div class="question">Tell us in detail about the error and your suggestion.</div>
