Handle unlocked instructor resources

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -92,7 +92,7 @@
                 <div id="resources" class="row">
                     <h3>OpenStax Instructor Resources</h3>
                     <p if="!model.hideInstructorInstructions">
-                        Access these free resources with your verified instructor account.
+                        Access free resources integrated with your book.
                         <span data-html="extraInstructions" skip="true"></span>
                     </p>
                     <div id="instructor-resources" class="resource" skip="true"></div>
