Fix things marked FIX
Also use $.insertHtml to replace setting innerHTML where possible

--- a/src/app/components/buckets/bucket/bucket.html
+++ b/src/app/components/buckets/bucket/bucket.html
@@ -3,7 +3,7 @@
     <div class="quote">
         <div>
             <span class="title">{model.heading}</span>
-            <blurb-html class="blurb"></blurb-html>
+            <blurb-html data-html="content" class="blurb" skip="true"></blurb-html>
         </div>
         <a class="btn {model.btnClass}" href="{model.link}">{model.cta}</a>
     </div>
