--- a/src/app/components/quotes/quote/quote.html
+++ b/src/app/components/quotes/quote/quote.html
@@ -5,7 +5,7 @@
     </if>
     <div class="quote {model.colorScheme || ''}">
         <blockquote>
-            <quote-html></quote-html>
+            <quote-html data-html="content" skip="true"></quote-html>
             <div if="model.attribution" class="attribution">— {model.attribution}</div>
         </blockquote>
         <img if="model.overlay" class="overlay" src="{model.overlay}">
