--- a/src/app/pages/details/partner/partner.html
+++ b/src/app/pages/details/partner/partner.html
@@ -6,7 +6,7 @@
             </div>
         </if>
         <h4>{model.name}</h4>
-        <blurb-html></blurb-html>
+        <blurb-html data-html="blurb"></blurb-html>
     </div>
     <div class="text">
         <a href="{model.url}" class="go-to with-arrow">{model.linkText}</a>
