--- a/src/app/pages/home/education/education.html
+++ b/src/app/pages/home/education/education.html
@@ -3,22 +3,22 @@
         <div class="square-1"></div>
         <div class="square-2"></div>
 
-        <div class="quote" data-html-content="0" skip="true"></div>
+        <div class="quote" data-html="main.content" skip="true"></div>
 
         <div class="student"></div>
 
         <div class="links">
             <ul>
                 <li>
-                    <a class="btn btn-large btn-orange higher-ed" href="{model[1].link}">
-                        <span class="title">{model[1].heading}</span>
-                        <span class="blurb" data-html-content="1" skip="true"></span>
+                    <a class="btn btn-large btn-orange higher-ed" href="{model.block1.link}">
+                        <span class="title">{model.block1.heading}</span>
+                        <span class="blurb" data-html="block1.content" skip="true"></span>
                     </a>
                 </li>
                 <li>
-                    <a class="btn btn-large btn-gold k-12" href="{model[2].link}">
-                        <span class="title">{model[2].heading}</span>
-                        <span class="blurb" data-html-content="2" skip="true"></span>
+                    <a class="btn btn-large btn-gold k-12" href="{model.block2.link}">
+                        <span class="title">{model.block2.heading}</span>
+                        <span class="blurb" data-html="block2.content" skip="true"></span>
                     </a>
                 </li>
             </ul>
