Fix: display book info on bulk-order

--- a/src/app/pages/bulk-order/order-items.html
+++ b/src/app/pages/bulk-order/order-items.html
@@ -6,7 +6,7 @@
             <th>List</th>
         </tr>
         <tr each="orderItem in model.orderItems">
-            <td data-html="{orderItem.item}" skip="true"></td>
+            <td data-html="orderItems[{$item}].item" skip="true"></td>
             <td><input type="number" data-row="{$item}" name="quantity" min="0" required value="{orderItem.quantity}" /></td>
             <td>${orderItem.list}</td>
         </tr>
