Fix link color in support page header

--- a/src/app/pages/support/support.scss
+++ b/src/app/pages/support/support.scss
@@ -9,6 +9,10 @@
         h1 {
             margin-bottom: 2.5rem;
         }
+
+        a {
+            color: color(blue);
+        }
     }
 
     .strips {
