--- a/src/app/components/select/select.html
+++ b/src/app/components/select/select.html
@@ -16,7 +16,7 @@
         <if condition="model.selected.size">
             <span each="item in model.selected" class="item">{$value}</span>
         <else>
-            <span class="item none">Please choose an option...</span>
+            <span class="item none">{model.placeholder || 'Please choose an option...'}</span>
         </if>
     </if>
     <ul class="options{model.open ? ' open' : ''}">
