--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -3,55 +3,17 @@
         <h1>{model.introHeading}</h1>
         <span data-html="introDescription" skip="true"></span>
     </div>
-    <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
-    <form accept-charset="UTF-8" class="form" target="form-response"
-     action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post"
-     if="model.titles">
-        <div class="text-content">
-            <div>
-                <input name="utf8" type="hidden" value="✓">
-                <input type="hidden" name="oid" value="00DU0000000Kwch">
-                <input type="hidden" name="lead_source" value="Adoption Form">
-            </div>
-            <p class="instructions">
-                To get started with an OpenStax book, fill out this form and paste the
-                book URL in your syllabus.
-            </p>
-            <component data-id="contactInfo" skip="true"></component>
+    <div class="text-content">
+        <div>
+            <input name="utf8" type="hidden" value="✓">
+            <input type="hidden" name="oid" value="00DU0000000Kwch">
+            <input type="hidden" name="lead_source" value="Adoption Form">
         </div>
-
-        <div class="wrapper">
-            <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-            <div class="text-content labeled-inputs row book-info">
-                <div id="primary-book" class="col">
-                    <component data-id="yourBook" skip="true"></component>
-                    <p>
-                        Don't see your book? Fill out our <a href="/interest">interest form</a>.
-                    </p>
-
-                    <component data-id="adoptionStatus" skip="true"></component>
-                    <component data-id="howMany" skip="true"></component>
-                    <component data-id="partnerResources" skip="true"></component>
-                    <component data-id="otherPartner" skip="true"></component>
-                    <component data-id="otherInstructors" skip="true"></component>
-                </div>
-
-                <div class="col">
-                    <component data-id="partnerContact" skip="true"></component>
-                    <component data-id="featureMe" skip="true"></component>
-                    <component data-id="contactMe" skip="true"></component>
-
-                    <label>
-                        Any feedback you'd like to share with us?
-                        <span class="invalid-message">{model.validationMessage('00NU00000056Rls')}</span>
-                        <textarea cols="50" name="00NU00000056Rls" rows="10"></textarea>
-                    </label>
-
-                    <div class="cta">
-                        <input name="commit" class="btn" type="submit" value="Submit" role="button" aria-disabled="false">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </form>
+        <p class="instructions">
+            To get started with an OpenStax book, fill out this form and paste the
+            book URL in your syllabus.
+        </p>
+        <component data-id="selectedRole" skip="true"></component>
+    </div>
+    <component data-id="form" skip="true"></component>
 </template>
