--- a/src/app/pages/adoption/adoption.scss
+++ b/src/app/pages/adoption/adoption.scss
@@ -20,7 +20,44 @@
         }
     }
 
+    [data-id="selectedRole"] {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        max-width: 50rem;
+        padding: 0 1.5rem;
+
+        > label {
+            flex-basis: 100%;
+        }
+    }
+
+    [data-id="form"]:empty {
+        display: block;
+        height: 20rem;
+    }
+
+    .cta {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 0 1.5rem 4rem;
+        width: 100%;
+    }
+
+    .text-content {
+        width: 100%;
+    }
+
+    .row .col {
+        flex-basis: 50%;
+    }
+
     .top-of-form {
         padding-top: inherit;
+    }
+
+    .wrapper {
+        padding-bottom: 4rem;
     }
 }
