--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -32,8 +32,9 @@
                 <input type="radio" name="resource" value="{sType}"
                  checked="{model.selectedSource === sType ? '' : null}"
                  required/>
-                <span class="label-text">{sType}</span>
-                <div if="sType in model.subnotes" class="indented subnote">{model.subnotes[sType]}</div>
+                <div class="label-text">{sType}
+                    <div if="sType in model.subnotes" class="indented subnote">{model.subnotes[sType]}</div>
+                </div>
 
                 <input if="sType === 'Other' && model.selectedSource === 'Other'" type="text"
                  class="{model.visitedClass}"
@@ -46,13 +47,13 @@
          value="{model.location}" readonly="{model.sourceProvided}"
          required />
         <div class="question">Tell us in detail about the error and your suggestion.</div>
-        <div class="subnote">
+        <div class="subnote wide">
             Please limit to one error per submission and include a suggested
             resolution if possible. If you have several to report, please
             contact us at <a href="mailto:errata@openstax.org">errata@openstax.org</a>.
         </div>
         <span class="invalid-message">{model.validationMessage('detail')}</span>
-        <textarea maxlength="1000" name="detail" required></textarea>
+        <textarea maxlength="1000" name="detail" skip="true" required></textarea>
         <div class="question">Please add a screenshot or any other file that helps explain the error.</div>
         <div class="file-button">
             <label class="btn">
