--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -1,55 +1,10 @@
 <template args="model">
-    <if condition="model.submitted">
-        <h1>Sending...</h1>
-    <else>
-        <div if="model.introHeading" class="text-content subhead">
-            <h1>{model.introHeading}</h1>
-            <span data-html="introDescription" skip="true"></span>
-        </div>
-        <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
-        <form accept-charset="UTF-8" action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8"
-         target="form-response" class="new_adoption_interest form" method="post"
-         if="model.titles">
-            <div class="text-content">
-                <div>
-                    <input type="hidden" name="oid" value="00DU0000000Kwch">
-                    <input type="hidden" name="lead_source" value="OS Interest Form">
-                    <input type="hidden" name="00NU00000055spw" value="High Interest in Adopting">
-                </div>
-                <component data-id="contactInfo" skip="true"></component>
-            </div>
-
-            <div class="wrapper">
-                <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-                <div class="text-content labeled-inputs row book-info">
-
-                    <div class="col">
-                        <component data-id="whichBook" skip="true"></component>
-                        <component data-id="howMany" skip="true"></component>
-                        <component data-id="partnerContact" skip="true"></component>
-                    </div>
-
-                    <div class="col">
-
-                        <component data-id="hearAbout" skip="true"></component>
-
-                        <label id="other-source" class="hidden">
-                            Other:
-                            <input name="00NU00000055spr" type="text"
-                            placeholder="Heard about us some other way?">
-                        </label>
-
-                        <label>
-                            Do you have any feedback you'd like to share with us?
-                            <textarea cols="50" name="00NU00000056Rls" rows="4"></textarea>
-                        </label>
-
-                        <div class="cta">
-                            <input name="commit" class="btn" type="submit" value="Submit" role="button" aria-disabled="false">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </if>
+    <div if="model.introHeading" class="text-content subhead">
+        <h1>{model.introHeading}</h1>
+        <span data-html="introDescription" skip="true"></span>
+    </div>
+    <div class="text-content">
+        <component data-id="selectedRole" skip="true"></component>
+    </div>
+    <component data-id="form" skip="true"></component>
 </template>
