Errata details: change visual design of tracking bar

--- a/src/app/pages/errata/errata.html
+++ b/src/app/pages/errata/errata.html
@@ -89,13 +89,13 @@
                 </div>
                 <div class="progress-bar">
                     <div class="progress-bar-layer">
-                        <div class="bar{model.detail.firstBarClass}"></div>
-                        <div class="bar{model.detail.secondBarClass}"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
                     </div>
                     <div class="progress-bar-layer">
-                        <div class="node filled"></div>
-                        <div class="node{model.detail.firstBarClass}"></div>
-                        <div class="node{model.detail.secondBarClass}"></div>
+                        <div class="node{model.detail.firstNodeClass}"></div>
+                        <div class="node{model.detail.secondNodeClass}"></div>
+                        <div class="node{model.detail.thirdNodeClass}"></div>
                     </div>
                 </div>
             </div>
