--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -13,13 +13,17 @@
         <div class="question">Select the type of error below.</div>
         <div class="radio-columns">
             <span class="invalid-message">{model.validationMessage('error_type')}</span>
-            <label each="eType in model.errorTypes">
-                <input type="radio" name="error_type" value="{eType}" required />
-                <span class="label-text">{eType}</span>
-                <input if="eType === 'Other' && model.selectedError === 'Other'" type="text"
-                 class="{model.visitedClass}"
-                 name="error_type_other" maxlength="250" required />
-            </label>
+            <div class="column-container">
+                <div class="col" each="sliceArgs in [[0,model.errorTypes.length/2], [model.errorTypes.length/2]]">
+                    <label each="eType in model.errorTypes.slice(...sliceArgs)">
+                        <input type="radio" name="error_type" value="{eType}" required />
+                        <span class="label-text">{eType}</span>
+                        <input if="eType === 'Other' && model.selectedError === 'Other'" type="text"
+                         class="{model.visitedClass}"
+                         name="error_type_other" maxlength="250" required />
+                    </label>
+                </div>
+            </div>
         </div>
         <div class="helpbox {model.helpBoxVisible()}">
             Need help logging in or have general questions? Contact Support at
@@ -28,18 +32,22 @@
         <div class="question">In which source did you find this error?</div>
         <div class="radio-columns">
             <span class="invalid-message">{model.validationMessage('resource')}</span>
-            <label each="sType in model.sourceTypes">
-                <input type="radio" name="resource" value="{sType}"
-                 checked="{model.selectedSource === sType ? '' : null}"
-                 required/>
-                <div class="label-text">{sType}
-                    <div if="sType in model.subnotes" class="indented subnote">{model.subnotes[sType]}</div>
-                </div>
+            <div class="column-container">
+                <div class="col" each="sliceArgs in [[0,model.sourceTypes.length/2 + 1], [model.sourceTypes.length/2 + 1]]">
+                    <label each="sType in model.sourceTypes.slice(...sliceArgs)">
+                        <input type="radio" name="resource" value="{sType}"
+                         checked="{model.selectedSource === sType ? '' : null}"
+                         required/>
+                        <div class="label-text">{sType}
+                            <div if="sType in model.subnotes" class="indented subnote">{model.subnotes[sType]}</div>
+                        </div>
 
-                <input if="sType === 'Other' && model.selectedSource === 'Other'" type="text"
-                 class="{model.visitedClass}"
-                 name="resource_other" maxlength="250" required />
-            </label>
+                        <input if="sType === 'Other' && model.selectedSource === 'Other'" type="text"
+                         class="{model.visitedClass}"
+                         name="resource_other" maxlength="250" required />
+                    </label>
+                </div>
+            </div>
         </div>
         <div class="question">Where did you find this error?</div>
         <span class="invalid-message">{model.validationMessage('location')}</span>
