Use "tutor-gray" for no-correction status bar color

--- a/src/app/components/calculator/calculator.scss
+++ b/src/app/components/calculator/calculator.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import 'mixins';
 
-$intro-text-color: #5e6062;
+$intro-text-color: color(tutor-gray);
 $block-bgcolor: #f6f6f6;
 $narrow-tablet: 700px;
 
