--- a/src/app/pages/errata/errata.scss
+++ b/src/app/pages/errata/errata.scss
@@ -291,7 +291,7 @@ $bar-size: 0.2rem;
             }
 
             &.filled-no {
-                background-color: color(yellow);
+                background-color: color(tutor-gray);
                 box-shadow: none;
             }
         }
