--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -12,7 +12,8 @@ $os-colors: (
     gray: #5f6062,
     facebook-blue: #3b5998,
     twitter-blue: #00aced,
-    linkedin-blue: #0077b5
+    linkedin-blue: #0077b5,
+    tutor-gray: #5e6062
 );
 
 @function os-color($color) {
