Change "iBook" to "Download on iBooks"

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -74,7 +74,7 @@
                 <div if="model.ibookLink2" class="option">
                     <span class="option-header">
                         <span class="fa fa-tablet"></span>
-                        iBook
+                        Download on iBooks
                     </span>
                     <a href="{model.ibookLink}">
                         Part 1
