Fix capitalization referring to partners

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -102,9 +102,9 @@
                 <div class="row">
                     <h3>Partner Resources</h3>
                     <p>
-                    OpenStax partners provide additional, low-cost resources for your
+                    OpenStax Partners provide additional, low-cost resources for your
                     book. See what's offered for this title below and learn more about
-                    our <a href="/partners">Partners here</a>.</p>
+                    our <a href="/partners">partners here</a>.</p>
                     <div id='partners' class="resource" skip="true"></div>
                 </div>
             </if>
