Center text in form headers

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -268,6 +268,8 @@ sup {
 
     h1,
     p {
+        margin-left: auto;
+        margin-right: auto;
         max-width: 80%;
 
         @include phone {
