Add RSS link to blog page

--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -7,6 +7,7 @@
         <div class="update-box" role="region">
             <h3>Get updates in your inbox.</h3>
             <a class="btn cta" href="http://www2.openstax.org/l/218812/2016-10-04/lvk">Sign Up</a>
+            {' or RSS '}<a class="rss-link" href="/blog-feed"><i class="fa fa-rss-square"></i></a>
         </div>
         <div class="boxed container" role="complementary"></div>
     </div>
