--- a/src/app/pages/blog/blog.scss
+++ b/src/app/pages/blog/blog.scss
@@ -128,6 +128,7 @@
     }
 
     .update-box {
+        align-items: baseline;
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
@@ -146,11 +147,20 @@
             background-color: color(orange);
             color: color(neutral-lightest);
             margin-left: 1rem;
+            margin-right: 1rem;
             padding: 1.25rem 3rem;
 
             @include phone {
                 margin: 0;
             }
         }
+
+        .rss-link i {
+            background-color: none;
+            color: color(orange);
+            font-size: 3rem;
+            margin: 1rem;
+        }
+
     }
 }
