--- a/src/app/pages/comp-copy/comp-copy.html
+++ b/src/app/pages/comp-copy/comp-copy.html
@@ -4,7 +4,7 @@
         <html-content class="description" data-html="introDescription" skip="true"></html-content>
     </div>
     <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
-    <form accept-charset="UTF-8" class="form" target="form-response"
+    <form accept-charset="UTF-8" class="form" target="form-response" if="model.introHeading"
      action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
         <div class="text-content">
              <div>
@@ -60,18 +60,9 @@
                 Book Requested <span class="invalid-message">{model.validationMessage('00NU00000053nzR')}</span>
                 <div skip="true"></div>
                 <select name="00NU00000053nzR" required>
-                    <option value="Anatomy & Physiology">Anatomy and Physiology</option>
-                    <option value="Biology">Biology</option>
-                    <option value="Chemistry">Chemistry</option>
-                    <option value="College Physics (Algebra)">College Physics</option>
-                    <option value="Concepts of Bio (non-majors)">Concepts of Biology</option>
-                    <option value="Introduction to Sociology">Introduction to Sociology 2e</option>
-                    <option value="Introductory Statistics">Introductory Statistics</option>
-                    <option value="Economics">Principles of Economics</option>
-                    <option value="Macro Econ">Principles of Macroeconomics</option>
-                    <option value="Micro Econ">Principles of Microeconomics</option>
-                    <option value="Psychology">Psychology</option>
-                    <option value="US History">U.S. History</option>
+                    <option each="book in model.books" value="{book.salesforce_abbreviation}">
+                        <span data-html="books[{$item}].title" skip="true"></span>
+                    </option>
                 </select>
             </label>
 
