Fix position of filter button bar

--- a/src/app/pages/partners/partners.html
+++ b/src/app/pages/partners/partners.html
@@ -7,9 +7,11 @@
             <img if="model.allyLogoColor" class="ally-logo" src="http://staxlogos.openstax.org/OSX-ALLY-{model.allyLogoColor}-RGB-150dpi.png" />
         </div>
     </div>
-    <div class="icons">
+    <div class="strips-and-filter">
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
         <div class="filter" skip="true"></div>
+    </div>
+    <div class="icons">
         <icon-viewer skip="true"></icon-viewer>
     </div>
     <div class="divider boxed">
