--- a/src/app/pages/subjects/subjects.html
+++ b/src/app/pages/subjects/subjects.html
@@ -1,9 +1,11 @@
 <template args="model">
     <div class="container" data-html="page_description" skip="true"></div>
 
-    <div class="books">
+    <div class="strips-and-filter">
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
         <div class="filter {model.filterIsSticky ? 'sticky': ''}" skip="true"></div>
+    </div>
+    <div class="books">
         <div class="container" skip="true"></div>
         <div class="feature-block">
             <div class="container" if="model.dev_standard_1_heading">
