--- a/src/app/pages/impact/impact.html
+++ b/src/app/pages/impact/impact.html
@@ -17,18 +17,12 @@
         <span class="scrolldown-chevron"><a href="#affiliates"><i class="fa fa-chevron-down"></i></a></span>
 
         <div id="affiliates" class="affiliates">
-            <div class="text-content">
-                <h2>Institutional Partner and Affiliate Schools</h2>
-                <p>
-                    Our institutional partner and affiliate schools are forging
-                    institutional initiatives to encourage adoptions of OpenStax
-                    and other open resources to give students access to the
-                    learning materials they need to succeed.
-                </p>
+            <div class="text-content" each="item in model.row_1">
+                <h2>{item.heading}</h2>
+                <html-block data-html="row_1[{$item}].content" skip="true"></html-block>
                 <div class="cta">
                     <a class="btn"
-                    href='/contact?subject=College/University%20Partnerships'>Contact
-                    us to learn more</a>
+                    href='{item.link}'>{item.cta}</a>
                 </div>
             </div>
 
