--- a/src/app/pages/errata/detail/detail.html
+++ b/src/app/pages/errata/detail/detail.html
@@ -7,7 +7,10 @@
             </div>
             <div class="label-value-pair">
                 <div class="label"></div>
-                <div class="value">Questions about the resolution? <a href="mailto:support@openstax.org">Ask us</a></div>
+                <div class="value">
+                    Questions about the resolution?
+                    <a href="mailto:support@openstax.org?subject=Errata%20submission%20question&body={model.mailBody}">Ask us</a>
+                </div>
             </div>
         </div>
     </div>
