Left-justify last row of logos on Impact page

--- a/src/app/pages/impact/impact.html
+++ b/src/app/pages/impact/impact.html
@@ -30,6 +30,7 @@
                 <li each="partner in model.institutions">
                     <img src="{partner.institution_logo}" alt="{partner.title}">
                 </li>
+                <li each="spacer in [1,2,3,4]"></li>
             </ul>
 
             <div class="adopters">
