--- a/src/app/pages/about/about.scss
+++ b/src/app/pages/about/about.scss
@@ -174,6 +174,15 @@ $hero-break-width: 880px;
         }
     }
 
+    .dismiss {
+        background-color: transparent;
+        color: inherit;
+        font-size: 2.2rem;
+        position: absolute;
+        right: 0.5rem;
+        top: 0.5rem;
+    }
+
     .details {
         background-color: color(neutral-lightest);
         bottom: 0;
