--- a/src/app/pages/interest/interest.scss
+++ b/src/app/pages/interest/interest.scss
@@ -6,6 +6,10 @@
         padding-top: inherit;
     }
 
+    .subhead {
+        padding-bottom: 2rem;
+    }
+
     .cta {
         display: flex;
         flex-direction: row;
