--- a/src/app/pages/adoption/adoption.scss
+++ b/src/app/pages/adoption/adoption.scss
@@ -2,22 +2,9 @@
 @import 'mixins';
 
 .adoption-page {
-    .hero {
-        h1 {
-            color: inherit;
-        }
-    }
 
-    .instructions {
-        color: #ccc;
-        font-size: 1.4rem;
-        font-weight: 300;
-        padding: 0 1.5rem;
-        text-align: center;
-
-        @include phone {
-            text-align: left;
-        }
+    .subhead {
+        padding-bottom: 2rem;
     }
 
     [data-id="selectedRole"] {
