Include errata ID in email subject

--- a/src/app/pages/errata/detail/detail.html
+++ b/src/app/pages/errata/detail/detail.html
@@ -9,7 +9,7 @@
                 <div class="label"></div>
                 <div class="value">
                     Questions about the resolution?
-                    <a href="mailto:support@openstax.org?subject=Errata%20submission%20question&body={model.mailBody}">Ask us</a>
+                    <a href="mailto:support@openstax.org?subject={model.mailSubject}&body={model.mailBody}">Ask us</a>
                 </div>
             </div>
         </div>
