Freeze scrolling while bio is up on mobile

--- a/src/app/pages/about/about.scss
+++ b/src/app/pages/about/about.scss
@@ -23,6 +23,12 @@ $hero-break-width: 880px;
     }
 }
 
+@include phone {
+    .frozen {
+        overflow: hidden;
+    }
+}
+
 .about-page {
     background-color: rgba(color(neutral-lighter), 0.2);
 
